@@ -128,7 +128,7 @@ public boolean isNativeUnique() {
 				break;
 			}
 	}
-	unique = new Boolean(result);
+	unique = Boolean.valueOf(result);
 	return result;
 }
 
