@@ -538,7 +538,7 @@ public Object getData (String key) {
 	if (key.equals (KEY_CHECK_SUBWINDOW)) {
 		return new Boolean ((state & CHECK_SUBWINDOW) != 0);
 	}
-	if (key.equals(IS_ACTIVE)) return new Boolean(isActive ());
+	if (key.equals(IS_ACTIVE)) return Boolean.valueOf(isActive ());
 	if ((state & KEYED_DATA) != 0) {
 		Object [] table = (Object []) data;
 		for (int i=1; i<table.length; i+=2) {
